cluster/manifests/metrics-server/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: metrics-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  mtls:
    mode: STRICT
