cluster/manifests/metrics-server/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: metrics-server
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: metrics-server
  outboundTrafficPolicy:
    mode: ALLOW_ANY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
